# mdf4-converters

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: main.yml
CMake/: FindAppImage.cmake  FindHeatshrink.cmake  FindPyCXX.cmake  FindPythonMulti.cmake  Findbotan.cmake  Findfmt.cmake
GenericFiles/: CMakeLists.txt
GenericFiles/Include/: AESGCMFile.h  GenericFile.h  HeatshrinkFile.h
GenericFiles/Source/: AESGCMFile.cpp  GenericFile.cpp  HeatshrinkFile.cpp
Python/: CMakeLists.txt
Python/Distribution_Iterator/: setup.py
Python/Distribution_Iterator/mdf_iter/: FileInterface.py  IFileInterface.py  __init__.py  mdf_iter.pyi
Python/Source/: CallbackBuffer.cpp  CallbackBuffer.h  Export.cpp  MdfCANIteratorWrapper.cpp  MdfCANIteratorWrapper.h  MdfCANRecordWrapper.cpp  MdfCANRecordWrapper.h  MdfFileWrapper.cpp  MdfFileWrapper.h  Module.cpp  Module.h  PythonLogger.cpp  PythonLogger.h
Tools/: CMakeLists.txt  README.md
Tools/ASC/: CMakeLists.txt
Tools/ASC/Source/: ASC_CAN_Exporter.cpp  ASC_CAN_Exporter.h  ASC_Exporter.cpp  ASC_Exporter.h  ASC_LIN_Exporter.cpp  ASC_LIN_Exporter.h  main.cpp
Tools/CLX000/: CMakeLists.txt
Tools/CLX000/Source/: CLX000_CAN_Exporter.cpp  CLX000_CAN_Exporter.h  CLX000_Configuration.h  CLX000_Exporter.cpp  CLX000_Exporter.h  CLX000_LIN_Exporter.cpp  CLX000_LIN_Exporter.h  main.cpp
Tools/CMake/: Package.cmake
Tools/CSV/: CMakeLists.txt
Tools/CSV/Source/: CSV_CAN_Exporter.cpp  CSV_CAN_Exporter.h  CSV_Exporter.cpp  CSV_Exporter.h  CSV_LIN_Exporter.cpp  CSV_LIN_Exporter.h  main.cpp
Tools/MDF/: CMakeLists.txt
Tools/MDF/Source/: MDFTool.cpp  MDFTool.h  main.cpp
Tools/PCAP/: CMakeLists.txt
Tools/PCAP/Source/: PCAP_CAN_Exporter.cpp  PCAP_CAN_Exporter.h  PCAP_Exporter.cpp  PCAP_Exporter.h  main.cpp
Tools/PEAK/: CMakeLists.txt
Tools/Resources/: AppImage.cmake  Windows.rc.in
Tools/Shared/: CMakeLists.txt
Tools/SocketCAN/: CMakeLists.txt
Tools/SystemTests/: README.md  conftest.py
(+69 files in other folders)
